--- a/app/src/main/res/layout/price_item.xml
+++ b/app/src/main/res/layout/price_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="?attr/colorAccent" />
+        android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/priceTextView"
